##Text encoding: utf-8

2011-08-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: remove obsolete  "Apply to" button.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/grid.cc: enhance keyboard navigation.
	* libs/gcr/grid.h: ditto.
	* ui/crystal/atoms.ui: remove obsolete  "Apply to" button.

2011-08-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: enhance multiple selection handling.
	* libs/gcr/grid.h: add gcr_grid_select_all().
	* libs/gcr/linesdlg.cc: new "Select all" button.
	* libs/gcugtk/ui-builder.cc: new GetObject() method.
	* libs/gcugtk/ui-builder.h: ditto.
	* ui/crystal/lines.ui: new "Select all" button.

2011-08-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: enhance mouse move selection and multiple selection.
	* libs/gcr/grid.h: ditto.
	* libs/gcr/linesdlg.cc: apply color and radius change to the whole 
	selection.
	* libs/gcr/linesdlg.h: ditto.

2011-08-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: start work on multiple row selection.
	* libs/gcr/grid.h: ditto.
	* libs/gcr/linesdlg.cc: use multiple selection in grid.

2011-08-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* pixmaps/Makefile.am: install svg icons for mime types as well.
	* programs/crystal/view-settings.cc: make it instant apply.
	* programs/crystal/view-settings.h: ditto.
	* ui/crystal/view-settings.ui: ditto.

2011-08-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* pixmaps/Makefile.am: install scalable icons instead of bitmaps.
	* programs/crystal/prefs.cc: made it instant apply.
	* programs/crystal/prefs.h: ditto.
	* ui/crystal/docprop.ui: minor fix.
	* ui/crystal/prefs.ui: made it instant apply.

2011-08-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/celldlg.cc: made it instant apply.
	* libs/gcr/celldlg.h: ditto.
	* pixmaps/gchem3d.svg: new svg icon, thanks to Matthias Mailänder.
	* pixmaps/gchemcalc.svg: ditto.
	* pixmaps/gchempaint.svg: ditto.
	* pixmaps/gchemtable.svg: ditto.